[package]
name = "luminance-glow"
version = "0.0.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Multi-GL backend for luminance using Glow"
keywords = ["stateless", "type-safe", "graphics", "luminance", "glow", "opengl"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-glow"
readme = "README.md"
edition = "2018"

[dependencies]
luminance = "0.43"
glow = { git = "https://github.com/katharostech/glow.git", branch = "extra-webgl1-functions" }
web-sys = { version = "0.3.48", features = ["WebGlRenderingContext", "WebGl2RenderingContext"] }

[build-dependencies]
cfg_aliases = "0.1.1"
